<resources>

    <!-- Application  -->
    <string name="main_app_name">EZBus</string>
    <string name="sub_app_name">Manager</string>
    <string name="splash_screen_logo_description">App logo - an image of a bus</string>
    <string name="splash_screen_loading_text">Loading EZBus Manager...</string>

    <!-- Login screens  -->
    <string name="app_name">ezBusManagerApplication</string>
    <string name="app_logo_name">EZBus</string>
    <string name="app_tag_line">Real-time public bus tracking and contactless fare payment system</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>

    <!-- Login successful screen   -->
    <string name="login_results_welcome_text_1">Great to see you again!</string>
    <string name="login_results_welcome_text_2">You\'ve logged in successfully.</string>

    <!-- Sign up screen  -->
    <string name="sign_up_text_input_hint_name">Please enter your name</string>
    <string name="sign_up_text_input_hint_email">Please enter your email</string>
    <string name="sign_up_text_input_hint_password">Please enter your password</string>
    <string name="sign_up_text_input_hint_password_confirm">Please confirm your password</string>
    <string name="signup_results_welcome_text_1">Welcome to our community!</string>
    <string name="signup_results_welcome_text_2">You\'ve signed up successfully.</string>

    <!-- Bus Fleet Register screen  -->
    <string name="fleet_register_headline">Register your Bus Fleet</string>
    <string name="fleet_register_instruction">Please enter your bus fleet details to proceed</string>
    <string name="fleet_register_text_input_hint_fleet_name">Bus Fleet Name</string>
    <string name="fleet_register_text_input_hint_fleet_registration_number">Bus Fleet Registration Number</string>
    <string name="fleet_register_instruction_2">Send the registration request to the administrator.</string>
    <string name="fleet_register_help">If you encounter issues or already have a registered fleet, contact us for assistance.</string>
    <string name="fleet_register_results_pending_1">Registration Request Sent!</string>
    <string name="fleet_register_results_pending_2">Your registration request is now under review. You will receive a notification once it has been approved or rejected.</string>
    <string name="fleet_register_results_approved_1">Congratulations! Registration Request Approved</string>
    <string name="fleet_register_results_approved_2">Your bus fleet registration request has been approved. You can now proceed with creating bus accounts.</string>
    <string name="fleet_register_results_approved_button">Continue</string>
    <string name="fleet_register_results_rejected_1">Sorry! Registration Request Rejected</string>
    <string name="fleet_register_results_rejected_2">We regret to inform you that your fleet registration request has been rejected due to </string>
    <string name="fleet_register_results_rejected_3">If you require further assistance, please contact us. Alternatively, you may retry the registration with the correct details.</string>
    <string name="fleet_register_results_rejected_button">Retry Registration</string>
    <string name="fleet_status_check_results_suspended_1">Account Suspended</string>
    <string name="fleet_status_check_results_suspended_2">We regret to inform you that your account has been temporarily suspended due to </string>
    <string name="fleet_status_check_results_suspended_3">Please review our terms and conditions to understand the reason for suspension. If you believe this is an error, please contact us for assistance.</string>

    <!-- No busses screen  -->
    <string name="no_busses_headline">You\'re all set!</string>
    <string name="no_busses_instruction">Let\'s get started by adding buses to your fleet.</string>
    <string name="no_busses_button">Add Your First Bus</string>

    <!-- Add bus screen  -->
    <string name="add_bus_headline">Add a New Bus</string>
    <string name="add_bus_instruction">Please fill in the details below to add a new bus to the system.</string>
    <string name="add_bus_text_input_hint_bus_number">Bus Registration Number</string>
    <string name="add_bus_text_input_hint_bus_route_number">Bus Route Number</string>
    <string name="add_bus_text_input_hint_bus_route_name">Bus Route Name</string>
    <string name="add_bus_text_input_hint_bus_color">Click to choose Bus Colour</string>
    <string name="add_bus_text_input_hint_bus_emergency_contact_number">Emergency Contact Number</string>
    <string name="add_bus_button_text">Add Bus</string>
    <string name="add_bus_help">If you encounter issues, contact us for assistance.</string>


    <!-- Map screen   -->
    <string name="MAPS_API_KEY">AIzaSyDDTamV9IieqbDXoWKxjEHmBo7jRcNuhFg</string>
    <string name="directions_URL">https://maps.googleapis.com/maps/api/directions/json</string>
    <string name="mapSearch_text">Your destination…?</string>
    <string name="auto_complete_recycler_heading_text">Your recent searches</string>
    <string name="current_location_heading_text">Your current location</string>
    <string name="button_show_directions">Show Directions</string>
    <string name="Source_Location_text">Origin</string>
    <string name="Destination_Location_text">Destination</string>

    <!-- ToolTip Texts   -->
    <string name="tooltip_text_close_button">Close</string>
    <string name="tooltip_text_gps_button">My Location</string>
    <string name="tooltip_text_full_screen_map_button">Full screen map</string>
    <string name="tooltip_text_settings_button">Settings</string>
    <string name="tooltip_text_search_bar">Search</string>

    <!--Settings Page - Buttons names-->
    <string name="button_settings_1">Profile Settings</string>
    <string name="button_settings_2">Payment Settings</string>
    <string name="button_settings_3">Security Settings</string>
    <string name="button_settings_4">About Us</string>
    <string name="button_settings_5">Contact Us</string>
    <string name="button_settings_6">Privacy Policy</string>
    <string name="button_settings_7">Terms of Service</string>
    <string name="button_settings_8">Log Out</string>


    <!--    About us -->
    <string name="about_us_overview">Welcome to the forefront of transformative technology with EZBus; the Mobile-based Real-Time Public Bus Tracking and Contactless Fare Payment System, a revolutionary initiative developed by Damitha Liyanaarachchi for the fulfillment of the Master of Information Technology degree at the University of Colombo School of Computing.</string>
    <string name="about_us_vision">At the heart of this project lies the ambition to address the absence of a fully functional Mobility as a Service (MaaS) platform in Sri Lanka. Our mission is to pioneer a mobile-based solution that seamlessly integrates real-time bus tracking and contactless fare payment, ultimately elevating the accessibility and popularity of public transportation. /nJoin us on the journey towards a sustainable and technologically advanced future in public transportation!</string>
    <string name="about_us_contact_us">For inquiries, collaborations, or additional information, please Contact Us</string>
    <string name="about_us_join_us">Join us on the journey towards a sustainable and technologically advanced future in public transportation!</string>

    <!--    Contact us -->
    <string name="contact_us_welcome">We value your feedback and inquiries! Reach out to us for any questions related to EZBus</string>
    <string name="contact_us_name">Damitha Liyanaarachchi</string>
    <string name="contact_us_email">damithaliyanaarachchi@gmail.com</string>
    <string name="contact_us_phone">0777 123 456</string>
    <string name="contact_us_linkedin">https://www.linkedin.com/in/damitha-liyanaarachchi-084b3a54/</string>
    <string name="contact_us_share">Share the app with your friends, family, and fellow commuters.</string>
    <string name="contact_us_quick_chat_welcome">Got a quick question or need instant assistance? We\'re here to help! Chat with us!</string>

    <!-- Privacy and TOS pages   -->
    <string name="privacy_url">https://sites.google.com/view/ezbuspassenger-privacy-policy</string>
    <string name="terms_conditions_url">https://sites.google.com/view/ezbuspassenger-terms-condition</string>


</resources>