<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login.FleetRegistration">

    <!-- Settings button-->
    <ImageView
        android:id="@+id/SettingsButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:background="@drawable/settings_icons_bg"
        android:padding="3dp"
        android:src="@drawable/sidebar_settings_24"
        android:tooltipText="@string/tooltip_text_settings_button"
        app:backgroundTint="@color/my_primary"
        app:tint="@color/white" />

    <!-- Pending Layout -->
    <LinearLayout
        android:id="@+id/PendingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            app:srcCompat="@drawable/ic_pending" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/fleet_register_results_pending_1"
            android:textColor="@color/my_primary"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/fleet_register_results_pending_2" />


    </LinearLayout>

    <!-- Approved Layout -->
    <LinearLayout
        android:id="@+id/ApprovedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            app:srcCompat="@drawable/ic_successful" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/fleet_register_results_approved_1"
            android:textColor="@color/my_primary"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="40dp"
            android:text="@string/fleet_register_results_approved_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ContinueButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/fleet_register_results_approved_button"
            app:cornerRadius="30dp"/>

    </LinearLayout>

    <!-- Rejected Layout -->
    <LinearLayout
        android:id="@+id/RejectedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            app:srcCompat="@drawable/ic_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/fleet_register_results_rejected_1"
            android:textColor="@color/my_primary"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/fleet_register_results_rejected_2" />

        <TextView
            android:id="@+id/rejectedReasonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:text="[reason]" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="40dp"
            android:text="@string/fleet_register_results_rejected_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RetryButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/fleet_register_results_rejected_button"
            app:cornerRadius="30dp"/>

    </LinearLayout>

    <!-- Suspended Layout -->
    <LinearLayout
        android:id="@+id/SuspendedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            app:srcCompat="@drawable/ic_fail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/fleet_status_check_results_suspended_1"
            android:textColor="@color/my_primary"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/fleet_status_check_results_suspended_2" />

        <TextView
            android:id="@+id/suspendedReasonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:text="[reason]" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:text="@string/fleet_status_check_results_suspended_3" />


    </LinearLayout>

    <!-- Registration form -->
    <LinearLayout
        android:id="@+id/fleetRegistrationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone"
        >

        <!-- Headline -->
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/fleet_register_headline"
            android:textColor="@color/gray"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Instruction text -->
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:text="@string/fleet_register_instruction" />

        <!-- Error text -->
        <TextView
            android:id="@+id/errorMessageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:text=""
            android:textColor="@color/colorRed" />


        <!-- Name input layout -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_edittext_bg"
            android:elevation="10dp"
            app:boxBackgroundMode="none"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <!-- Name input text -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFleetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fleet_register_text_input_hint_fleet_name"
                android:inputType="text"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Registration number input layout -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_edittext_bg"
            android:elevation="10dp"
            app:boxBackgroundMode="none"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <!-- Registration number input text -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRegistrationNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fleet_register_text_input_hint_fleet_registration_number"
                android:inputType="text"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/conditionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/fleet_register_instruction_2"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SubmitButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:text="Submit"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/helpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/fleet_register_help"
            android:textAlignment="center" />

    </LinearLayout>

    <!-- Loading ProgressBar -->
    <RelativeLayout
        android:id="@+id/loadingProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <!-- Dark overlay -->
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000" />

        <!-- ProgressBar -->
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center" />

    </RelativeLayout>

</RelativeLayout>