<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_background"
    tools:context=".ui.Login.SignUp">

    <!-- Background overlay -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- App name -->
        <TextView
            android:id="@+id/main_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/main_app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <!-- Headline -->
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Create a New Account"
            android:textColor="@color/gray"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Instruction text -->
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:text="Please enter your details to proceed" />

        <!-- Error text -->
        <TextView
            android:id="@+id/errorMessageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:text=""
            android:textColor="@color/colorRed" />


        <!-- Name input layout -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_edittext_bg"
            android:elevation="10dp"
            app:boxBackgroundMode="none"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <!-- Name input text -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sign_up_text_input_hint_name"
                android:inputType="textPersonName"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email input layout -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_edittext_bg"
            android:elevation="10dp"
            app:boxBackgroundMode="none"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <!-- Email input text -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sign_up_text_input_hint_email"
                android:inputType="textEmailAddress"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password input layout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPasswordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_edittext_bg"
            android:elevation="10dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <!-- Password input text -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sign_up_text_input_hint_password"
                android:inputType="textPassword"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password confirm input layout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextConfirmPasswordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_edittext_bg"
            android:elevation="10dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <!-- Password confirm input text -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sign_up_text_input_hint_password_confirm"
                android:inputType="textPassword"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/conditionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="By clicking Sign up, you agree to our Terms of Service and Privacy Policy"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignUpButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:text="Sign Up"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="You already have an account? Login" />

    </LinearLayout>


</RelativeLayout>